--- a/migratoryBirds.html
+++ b/migratoryBirds.html
@@ -20,7 +20,7 @@
       /* function code is to be written, empty now */
     }
   </script>-->
-<script type="text/javascript" src="climbingLeaderboard.js"></script>
+<script type="text/javascript" src="jumpingOnClouds.js"></script>
   
 </body>
 </html>
